# website

./: .gitignore  LICENSE
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  useScript.js
frontend/src/assets/css/: style.css
frontend/src/components/: About.js  Blog.js  ClientItem.js  Contact.js  FilterList.js  Head.js  Layout.js  MainContent.js  MetaTags.js  Navbar.js  PageContent.js  Portfolio.js  Resume.js  ServiceItem.js  Sidebar.js  SidebarInfo.js  TestimonialItem.js  TestimonialModal.js
frontend/src/utils/: images.js
