[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.5"
lettre = "0.11.7"
# tokio-postgres = { version = "0.7", features = ["full"] }
tokio-postgres = "0.7.11"
dotenv = "0.15"
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["full"] }
